Changed z-index to -1 due to bug on mobile safari
Changed z-index to -1 due to bug on mobile safari on flow-line:after

--- a/layout/_flow-nav.scss
+++ b/layout/_flow-nav.scss
@@ -34,7 +34,7 @@
     left: 0;
     width: 100%;
     height: 1px;
-    z-index: 1;
+    z-index: -1;
     background: map-deep-get($ui, "dark", light);
   }
 }
